background: fixed works on mobile too

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -114,7 +114,6 @@
 
 @media screen and (max-width: 767px) {
     .contact {
-        background-attachment: local;
         background-size: 330%;
     }
     .contact-container {
